--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
 body {
-  background-color: black;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 29%,
+    rgba(59, 2, 74, 0.8716620437237395) 80%,
+    rgba(134, 0, 23, 1) 100%
+  );
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  padding: 0;
+  font-family: sans-serif;
 }
